micro-member-service/dev/service.yml
apiVersion: v1
kind: Service
metadata:
  name: micro-member-service-dev
  labels:
    app.kubernetes.io/name: micro-member-service-dev
spec:
  ports:
    - port: 8090
      name: http
      targetPort: 8090
      nodePort: 30032
  selector:
    app.kubernetes.io/name: micro-member-service-dev
  type: NodePort
