micro-member-service/dev/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: micro-member-service-dev-internal
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: micro-member-service-dev
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: micro-member-service-dev
              servicePort: http
